Dynamic-access coverage for org.apache.pdfbox.io.IOUtils (3/3)